# jaffle-sl-testing

./: .gitignore  .pre-commit-config.yaml  README.md  Taskfile.yml  dbt_project.yml  package-lock.yml  packages.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
models/marts/: order_items.yml  orders.yml
models/saved_queries/: saved_queries.yml
models/sources/: sources.yml
models/staging/: stg_customers.sql  stg_locations.sql  stg_order_items.sql  stg_orders.sql  stg_products.sql  stg_supplies.sql
seed/: seed.py
seed/generator/: generator.py  impl.py  providers.py
